--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,15 @@
   "license": "MIT",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.7.5"
+    "helmet": "^7.2.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@types/socket.io-client": "^1.4.36"
+    "nodemon": "^3.1.7"
   }
 }
